# wasmi

./: Cargo.toml
.github/workflows/: rust.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  vmem.rs
crates/wasmi/: Cargo.toml
crates/wasmi/src/: global.rs  lib.rs  patches.rs  store.rs
crates/wasmi/src/engine/: cache.rs
crates/wasmi/src/memory/: buffer_vec.rs  buffer_vmem.rs  error.rs  mod.rs
src/memory/: mmap_bytebuf.rs  mod.rs
validation/: Cargo.toml
validation/src/: func.rs
wasmi_v1/src/module/: mod.rs
