[package]
name = "wasmi-validation"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/paritytech/wasmi"
description = "Wasm code validator"

[dependencies]
parity-wasm = { git = "https://github.com/gear-tech/parity-wasm", branch = "v0.45.0-sign-ext", default-features = false }

[dev-dependencies]
assert_matches = "1.1"

[features]
default = ["std"]
std = ["parity-wasm/std"]
