[package]
name = "gwasmi_core"
version = "0.12.0"
documentation = "https://docs.rs/wasmi_core"
description = "Core primitives for the wasmi WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libm = "0.2.1"
num-traits = { version = "0.2.8", default-features = false }
downcast-rs = { version = "1.2", default-features = false }
paste = "1"
region = { version = "3.0.0", optional = true }

[dev-dependencies]
rand = "0.8.2"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = ["num-traits/std", "downcast-rs/std"]
# Enables OS supported virtual memory.
#
# Note
#
# - This feature is only supported on 64-bit platforms.
#   For 32-bit platforms the linear memory will fallback to using the Vec
#   based implementation.
# - The default is to fall back is an inefficient vector based implementation.
# - By nature this feature requires `region` and the Rust standard library.
virtual_memory = ["region", "std"]

[package.metadata.cargo-udeps.ignore]
# cargo-udeps cannot detect that libm is used for no_std targets only.
normal = ["libm"]
