[package]
name = "wasmi"
version = "0.30.0"
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter"
exclude = ["tests/*", "benches/*"]
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmparser = { version = "0.100.1", package = "wasmparser-nostd", default-features = false }
wasmi_core = { version = "0.12", path = "../core", default-features = false }
wasmi_arena = { version = "0.4", path = "../arena", default-features = false }
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "spin_mutex",
    "rwlock",
] }
smallvec = { version = "1.10.0", features = ["union"] }
intx = "0.1.0"

[dev-dependencies]
wat = "1"
assert_matches = "1.5"
wast = "52.0"
anyhow = "1.0"
criterion = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = ["wasmi_core/std", "wasmi_arena/std", "wasmparser/std", "spin/std"]
# Enables OS supported virtual memory.
#
# Note
#
# - This feature is only supported on 64-bit platforms.
#   For 32-bit platforms the linear memory will fallback to using the Vec
#   based implementation.
# - The default is to fall back is an inefficient vector based implementation.
# - By nature this feature requires `region` and the Rust standard library.
virtual_memory = ["wasmi_core/virtual_memory", "std"]

[[bench]]
name = "benches"
harness = false
